--- a/scss/all-blokc/_container.scss
+++ b/scss/all-blokc/_container.scss
@@ -6,3 +6,12 @@
     padding: 0 20px;
     z-index: -1;
 }
+
+.containers {
+    // position: relative;
+    width: 100%;
+    max-width: 1293px;
+    margin: 0 auto;
+    padding: 0 20px;
+    z-index: -1;
+}
