--- a/scss/all-blokc/_contact.scss
+++ b/scss/all-blokc/_contact.scss
@@ -32,7 +32,7 @@
 input {
      padding: 15px 200px 15px 20px;
      border: 2px solid #E5E5E5;
-     outline: none;
+     // outline: none;
 }
 input[type="text"]{
      border: 2px solid #BCDDFE;
