--- a/css/main.css
+++ b/css/main.css
@@ -488,6 +488,12 @@ img {
           flex-grow: 1;
 }
 
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
 .header {
   position: -webkit-sticky;
   position: sticky;
@@ -675,6 +681,9 @@ img {
 }
 
 @media only screen and (max-width: 676px) {
+  body {
+    padding-top: 86px;
+  }
   .header {
     position: fixed;
     top: 0;
@@ -2189,6 +2198,26 @@ img {
   }
 }
 
+@media only screen and (max-width: 528px) {
+  .home-products__title {
+    font-size: 20px;
+  }
+  .home-products__navlist {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 490px) {
+  .home-hero__title {
+    font-size: 18px;
+    color: #40bfff;
+  }
+  .home-products__list {
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+}
+
 .home-hero {
   position: relative;
   width: 100%;
@@ -2359,12 +2388,31 @@ img {
   }
 }
 
-@media only screen and (max-width: 760) {
-  .home-hero__list {
-    bottom: 150px;
+@media only screen and (max-width: 760px) {
+  .home-hero {
+    width: 95%;
+    margin: 16px;
+    border-radius: 5px;
   }
-  .home-hero__item-desc1 {
+  .home-hero__img {
+    width: 100%;
+    border-radius: 5px;
+  }
+  .home-hero__title {
+    width: 350px;
+    top: 50px;
+    left: 50px;
+    font-size: 35px;
+  }
+  .home-hero__list {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 490px) {
+  .home-hero__title {
+    width: 250px;
+    font-size: 24px;
   }
 }
 
