--- a/scss/all-blokc/_home-hero.scss
+++ b/scss/all-blokc/_home-hero.scss
@@ -158,7 +158,7 @@
 @media only screen and (max-width:831px) {
     .home-hero {
         margin-bottom: 240px;
-
+        
         &__title {
             font-size: 40px;
             width: 400px;
@@ -172,14 +172,37 @@
     }
 }
 
-@media only screen and (max-width:760) {
+@media only screen and (max-width:760px) {
   .home-hero {
-    &__list {
-        bottom:150px
+      width: 95%;
+    margin: 16px;
+    border-radius:5px;
+    &__img {
+        width: 100%;
+        border-radius:5px;
     }
 
-    &__item-desc1 {
+    &__title {
+        width: 350px;
+        top: 50px;
+        left: 50px;
+        font-size: 35px;
+    }
+    
+    &__list {
         display: none;
     }
+
   }
+}
+
+@media only screen and (max-width:490px) { 
+    .home-hero {
+        &__title {
+            width: 250px;
+            // top: 50px;
+            // left: 50px;
+            font-size: 24px;
+        }
+    }
 }
